--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
-body{
-    
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html, body{
+    min-height: 100vh;
+}
+
+header{
+    background-color: black;
+    text-align: center;
+    padding: 4.5rem;
+    color: white;
+}
+
+h1{
+    font-family: "Passion one", cursive, sans-serif;
+    font-size: 10vw;
+    font-variant: small-caps;
+}
+
+#autor{
+    font-size: 1.3rem;
+}
+
+section{
+    font-family: "Sriracha", cursive, sans-serif;
+    font-size: 5vw;
+    padding: 5.5rem 2rem 10rem;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+
+.imagem1{
+    background-image: url('imagens/torre.jpg');
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top left;
+    background-attachment: fixed;
+    color: white;
+}
+
+.imagem2{
+    background-image: url('imagens/ceu2.jpg');
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top left;
+    background-attachment: fixed;
+    color: white;
 }
