--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ footer{
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top left;
+    background-position: top right;
     background-attachment: fixed;
     color: white;
 }
