--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ footer{
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top left;
+    background-position: center center;
     background-attachment: fixed;
     color: white;
 }
